<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (C) 2016 Track & Talk Ltd
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="none"
        android:menuCategory="container"
        >
        <item
            android:id="@+id/nav_my_schedule"
            android:icon="@drawable/ic_access_time_black_48dp"
            android:title="@string/my_schedule"/>

        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/map_pin"
            android:title="@string/map"

            />

        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_social_hashtag"
            android:title="@string/social"
            />
    </group>

    <group
        android:id="@+id/second_group"
        android:checkableBehavior="none"
        android:menuCategory="system"
        >

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_48pt"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_48pt"
            android:title="@string/about"

            />

    </group>

</menu>