<!--
  ~ /*
  ~  * Copyright (C) 2016 Track & Talk Ltd
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.trackandtalk.pafos17.ui.signin.GoogleSignInActivity"
    android:fitsSystemWindows="true"

    >



    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_centerInParent="true"
        android:layout_margin="48dp"
        app:contentPadding="32dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        android:transitionName="@string/transition_google_login"
        android:animateLayoutChanges="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/need_login"
                android:layout_marginBottom="16dp"
                style="@style/TextAppearance.DialogTitle"
                />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="true"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    style="@style/Widget.AppCompat.ProgressBar"
                    />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_signin_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    app:buttonSize="wide"
                    app:colorScheme="dark"
                    />

                <TextView
                    android:id="@+id/error_success"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_fail"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/error"
                    android:visibility="gone"

                    />

            </FrameLayout>



        </LinearLayout>



    </android.support.v7.widget.CardView>

</RelativeLayout>
