<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (C) 2016 Track & Talk Ltd
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.trackandtalk.pafos17.ui.settings.AboutActivity"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:weightSum="7"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pafos2017_logo_transparent"
                    android:padding="8dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="www.pafos2017.eu"
                    android:gravity="center_horizontal"
                    android:autoLink="web"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"

                >

                <TextView
                    android:id="@+id/powered_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="powered by"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:gravity="right"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/zoom_logo_black"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="www.zoomcy.com"
                    android:autoLink="web"
                    />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"

            tools:text="Version X"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/trademarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pafos_trademarks"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/proudly_made_in"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                />

            <TextView
                android:id="@+id/license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright_license"
                android:autoLink="web"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:onClick="onGithubButtonClick"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon_github"
                android:padding="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Source on GitHub"
                android:gravity="center"
                />

        </LinearLayout>

        <Button
            android:id="@+id/licenses_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Open Source Licenses"
            android:backgroundTint="@color/colorAccentLight"
            android:onClick="onLicensesButtonClick"
            />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
